# foobar-example

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/foobar/: __init__.py  __main__.py
tests/: test_message.py
