[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foobar"
version = "0.0.1"
description = "A cool cowsay project"

readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
foobar = "foobar:__main__.main"
